# dz_inf_var2

./: CMakeLists.txt  README.md  main.cpp
csv/: customers.csv  products.csv  sales.csv
